[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ollivision"
version = "0.1.0"
description = "Minimales OlliVision CLI-Projekt"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["ollivision"]
